test: cover inspection overdue scheduler tenant context